# B-OOP-400-tekspice

./: .gitignore  CMakeLists.txt  TekSpice.cpp  test.nts
B-OOP-400_nanotekspicezip/nts_single/: 4081_and.nts
asset/B-OOP-400_nanotekspicezip/nts_advanced/: altered-counter.nts
asset/B-OOP-400_nanotekspicezip/nts_single/: bad.nts
components/: Factory.cpp  IComponent.hpp
src/: Compute.cpp  Compute.hpp
src/components/: AComponent.cpp  AComponent.hpp  Chipset.cpp  Chipset.hpp  Compute.cpp  Compute.hpp  Factory.cpp  Factory.hpp  FlipFlop.cpp  FlipFlop.hpp  Gate.cpp  IComponent.hpp
src/components/chipsets/: C4001.cpp  C4001.hpp  C4008.cpp  C4008.hpp  C4011.cpp  C4011.hpp  C4013.cpp  C4013.hpp  C4017.cpp  C4017.hpp  C4030.cpp  C4030.hpp  C4040.cpp  C4040.hpp  C4069.cpp  C4069.hpp  C4071.cpp  C4071.hpp  C4081.cpp  C4081.hpp  CClock.cpp  CClock.hpp  CFalse.cpp  CFalse.hpp  CInput.cpp  CInput.hpp  COutput.cpp  COutput.hpp  CTrue.cpp  CTrue.hpp
src/parser/: Parser.cpp  Parser.hpp
src/utils/: RegUtils.hpp
utils/: RegUtils.cpp  RegUtils.hpp
